syntax = "proto3";

package mess;

message Customer {
    string LoginCustomer = 1;
    string PasswortCustomer = 2;
}

message CustomerInfo {
    Customer CustomerAut = 1;
    string CustomerCountry = 2;
    string CustomerCiry = 3;
}

message Warehouse {
    string LoginWarehouse = 1;
    string PasswortWarehouse = 2;
}

message WarehouseInfo {
    Warehouse WarehouseAut = 1;
    string WarehouseName = 2;
    string WarehouseCountry = 3;
    string WarehouseCity = 4;
    float WarehouseCommission = 5;
    string WarehouseNote = 6;
}

message Vendor {
    string LoginVendor = 1;
    string PasswortVendor = 2;
}

message VendorInfo {
    Vendor VendorAut = 1;
    string VendorName = 2;
}

message Goods {
    Vendor VendorAut = 1;
    string NameGoods = 2;
    string TypeGoods = 3;
}

message VendorPrice {
    Vendor VendorAut = 1;
    string NameGoods = 2;
    string PriceGoods = 3;
}

message Consignment {
    string WarehouseName = 1;
    string VendorName = 2;
    string NameGoods = 3;
    fixed32 AmountGoods = 4;
    fixed32 AmountGoodsDefect = 5;
    string ArrivalDate = 6;
    fixed32 IdProblem = 7;
    string ConsignmentNote = 8;
}

message ConsignmentVW {
    oneof VendorOrWarehouse{
        Vendor VendorAut = 1;
        Warehouse WarehouseAut = 2;
    }
    Consignment ConsignmentM = 3;
}

message Order {
    string OrderCountry = 1;
    string VendorName = 2;
    string WarehouseName = 3;
    string NameGoods = 4;
    fixed32 AmountGoods = 5;
    string LoginCustomer = 6;
}

message ArrayOrder {
    repeated Order Orders = 1;
    string UuidOperation = 2;
}